--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ authors = ["Julius de Boer"]
 
 [dependencies]
 anyhow = "1.0"
+colored = "2.0.0"
 dialoguer = "0.10"
 reqwest = { version = "0.11", features = ["blocking"] }
