--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ authors = ["Julius de Boer"]
 anyhow = "1.0"
 colored = "2.0.0"
 dialoguer = "0.10"
+lazy_static = "1.4.0"
 reqwest = { version = "0.11", features = ["blocking"] }
